--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 
 h1 {
   text-align: center;
+  font-size: 50px;
 }
 
 #difficulty {
@@ -57,17 +58,17 @@ h1 {
 
 #grid-outline {
   display: flex;
+  background-color: black;
   width: auto;
   border: 3px solid black;
   justify-content: center;
   align-items: center;
-  padding: 0px 14px 0px 0px;
+  padding: 2px 2px 2px 2px;
 }
 
 #sudoku-grid {
   display: grid;
   grid-template-columns: repeat(9, 1fr);
-  gap: 2px;
   width: 450px;
   margin: auto;
 }
@@ -79,22 +80,21 @@ h1 {
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  border: 1px solid #ccc;
+  border: 2px solid #ccc;
   box-sizing: border-box;
   transition: background-color 0.5s ease;
 }
 
-/* Highlight the selected cell and related cells */
 .cell.selected,
 .cell.related {
   background-color: #f0f0f0;
 }
 
-/* Differentiate fixed and editable cells */
 .cell[contenteditable="true"] {
   background-color: rgb(248 250 252);
   color: #000;
   border: 1.5px solid #000;
+  caret-color: transparent;
 }
 
 .cell[contenteditable="false"] {
@@ -106,29 +106,29 @@ h1 {
 
 .cell[contenteditable="true"]:hover {
   background-color: rgb(209 213 219);
-  border: 2.5px solid black;
+  border: 2px solid black;
 }
 
 /* Vertical borders */
 #sudoku-grid .cell:nth-child(3n + 3) {
-  border-right: 4px solid #000;
+  border-right: 3px solid #000;
 }
 
 #sudoku-grid .cell:nth-child(3n + 1) {
-  border-left: 4px solid #000;
+  border-left: 3px solid #000;
 }
 
 /* Horizontal borders */
 #sudoku-grid .cell:nth-child(n + 19):nth-child(-n + 27),
 #sudoku-grid .cell:nth-child(n + 46):nth-child(-n + 54),
 #sudoku-grid .cell:nth-child(n + 73):nth-child(-n + 81) {
-  border-bottom: 4px solid #000;
+  border-bottom: 3px solid #000;
 }
 
 #sudoku-grid .cell:nth-child(n + 0):nth-child(-n + 9),
 #sudoku-grid .cell:nth-child(n + 28):nth-child(-n + 36),
 #sudoku-grid .cell:nth-child(n + 55):nth-child(-n + 63),
 #sudoku-grid .cell:nth-child(n + 82):nth-child(-n + 90) {
-  border-top: 4px solid #000;
+  border-top: 3px solid #000;
 }
 
