--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ h1 {
   border: 3px solid black;
   justify-content: center;
   align-items: center;
-  padding: 2px 2px 2px 2px;
+  padding: 1px;
 }
 
 #sudoku-grid {
