--- a/styles/style.css
+++ b/styles/style.css
@@ -56,6 +56,12 @@ h1 {
   height: 100vh;
 }
 
+#timer {
+  font-size: 1.5em;
+  text-align: center;
+  margin-bottom: 1em;
+}
+
 #grid-outline {
   display: flex;
   background-color: black;
